<resources>
    <string name="app_name">Instagram</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add_new_post">Add New Post</string>
    <string name="profile">Profile</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_conform_password">Conform Password</string>
    <string name="register_create_account">Create Account</string>
    <string name="register_icon">TODO</string>
    <string name="login_email">Email</string>
    <string name="login_button">login</string>
    <string name="login_password">Password</string>
    <string name="or_login_with">or login with</string>
    <string name="don_t_have_an_account_create_an_new_account">Don\'t have an account.Create an new Account</string>
    <string name="don_t_have_an_account_need_new_account">Don\'t have an account.need new account</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="save">save</string>
    <string name="username">username</string>
    <string name="write_something_about_image_here">write something about image here..</string>
    <string name="update_post">Update Post</string>
    <string name="user_name">user name</string>
    <string name="has_been_updated_a_post">has been updated a post</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="post_description">Post description . . . .</string>
    <string name="todo">TODO</string>
    <string name="updated">updated @</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="click_post_description">Post description</string>
    <string name="profile_status">Profile status</string>
    <string name="usersname">Usersname</string>
    <string name="profile_name">Profile name</string>
    <string name="_0_likes">0 likes</string>
    <string name="profile_namep">Profile Name</string>
    <string name="user_namep">User Name</string>
    <string name="hey_hii_hiw_are_you_i_am_fine_come_lets_have_an_party">hey hii hiw Are you i am fine come lets have an party</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="relationship_status">Relationship status</string>
    <string name="we_will_send_the_link_to_your_mail_after_when_you_provide_email_and_click_the_send_button_please_click_on_that_link_to_reset_your_password">We will send the link to your mail after when you provide email and click the send button. Please click on that link to reset your password</string>
    <string name="write_your_email_here">write your email here...</string>
    <string name="send_email">send email</string>
    <string name="update_settings">Update Settings</string>
    <string name="commented_on">commented on</string>
    <string name="comment_text_will_display_here">Comment text will display here...</string>

</resources>
