<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uiilogun"
    tools:context=".ProfileActivity"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/person_profile_pic"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile"/>

            <TextView
                android:id="@+id/person_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_namep"
                android:layout_below="@+id/person_profile_pic"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/person_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_namep"
                android:layout_below="@+id/person_profile_full_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/person_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hey_hii_hiw_are_you_i_am_fine_come_lets_have_an_party"
                android:layout_below="@+id/person_username"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/person_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:layout_below="@+id/person_profile_status"
                android:layout_marginTop="60dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/person_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:layout_below="@+id/person_country"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/person_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_below="@+id/person_dob"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/person_relationship_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relationship_status"
                android:layout_below="@+id/person_dob"
                android:layout_marginTop="35dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:gravity="center_horizontal" />


        </RelativeLayout>

    </ScrollView>
