<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uiilogun"
    tools:context=".ResetPassordActivity">

    <include
        android:id="@+id/forget_password_toolbar"
        layout="@layout/app_bar_layout">

    </include>

    <ImageView
        android:id="@+id/login_iconn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/appicontrans"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/forget_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_iconn"
        android:layout_centerHorizontal="true"
        android:text="@string/we_will_send_the_link_to_your_mail_after_when_you_provide_email_and_click_the_send_button_please_click_on_that_link_to_reset_your_password"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forget_password_text"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/write_your_email_here"
        android:background="@drawable/inputs"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/send_email"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_email"
        android:text="@string/send_email"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:background="@drawable/button"/>


</RelativeLayout>