<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uiilogun"
    tools:context=".ClickPostActivity">

    <ImageView
        android:id="@+id/click_post_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/inputs"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/select_image" />

    <TextView
        android:id="@+id/click_post_description"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/click_post_image"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/inputs"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/click_post_description"
        android:textAlignment="textStart"
        android:textColor="#D1000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/edit_post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_post"
        android:textColor="#ffffff"
        android:layout_above="@+id/delete_post_button"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:background="@drawable/button" />

    <Button
        android:id="@+id/delete_post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_post"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button"
        android:layout_alignParentLeft="true" />

</RelativeLayout>