<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity"
    android:background="@drawable/headerr">

    <include
        android:id="@+id/update_post_page_toolbar"
        layout="@layout/app_bar_layout"/>

    <ImageButton
        android:id="@+id/select_post_image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@id/update_post_page_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/select_image"
        android:contentDescription="@string/todo"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_post_image"
        android:layout_marginTop="65dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write_something_about_image_here"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/update_post_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button"
        android:text="@string/update_post"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />


</RelativeLayout>