<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="@drawable/uiilogun">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/setup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="280dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/username"
        android:drawableLeft="@drawable/username"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/setup_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/name"
        android:drawableLeft="@drawable/name"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/setup_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="420dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/country"
        android:drawableLeft="@drawable/country"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/country"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <Button
        android:id="@+id/setup_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_country_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:padding="14dp"
        android:text="@string/save" />

</RelativeLayout>