<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uiilogun"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/settings_toolbar"
        layout="@layout/app_bar_layout">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/settings_toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        tools:ignore="RtlCompat">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile"/>

            <EditText
                android:id="@+id/settings_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_image"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/inputs"
                android:hint="@string/profile_status"
                android:inputType="text"
                android:padding="30dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/settings_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_status"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/usersname"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/settings_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_username"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/profile_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/settings_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_full_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/country"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settings_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_country"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/date_of_birth"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/settings_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_dob"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/gender"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/settings_relationship_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_gender"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/relationship_status"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:importantForAutofill="no" />
            <Button
                android:id="@+id/update_acc_settings_buttons"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/settings_relationship_status"
                android:layout_margin="30dp"
                android:background="@drawable/button"
                android:text="@string/update_settings"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="#ffffff"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>