<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_account_link"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uiilogun"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/appicontrans"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="@string/login_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/login_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/login_button"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dont_hav_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="485dp"
        android:layout_centerHorizontal="true"
        android:text="create an new account"
        android:textAlignment="center"
        android:textColor="#5A0600"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:text="Forget Password"
        android:textColor="#5A0600"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>